# control-hysteresis_model

./: .gitignore  BoucWenBaberNooriModel.cpp  BoucWenBaberNooriModel.hpp  BoucWenHysteresisModel.cpp  BoucWenHysteresisModel.hpp  CMakeLists.txt  hysteresis_model.pc.in  manifest.xml
coupling_calibration/: BoucWenHysteresisModel.cpp  BoucWenHysteresisModel.hpp  CMakeLists.txt  CalibrateCoupling.cpp  LevMarOptimization.cpp  LevMarOptimization.h  ModelOutput.cpp  ModelOutput.h
coupling_calibration/scripts/: ExtractCouplingCalibrationData.py
